--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,7 +3,7 @@
   margin-top: -20vh;
   padding: 25rem 0;
   @include respond(tab-port) {
-    padding: 20rem 0;
+    padding: 25rem 0;
   }
 }
 
